styles/Header.module.css
.container {
    @apply w-full h-[12vh] p-3 md:p-10 lg:p-3 box-border flex flex-col justify-center items-center fixed mt-2 z-50 bg-background;
}

.wrapper {
    @apply w-full lg:w-[90vw] xl:w-[80vw] p-5 box-border flex flex-row justify-between items-center border-[1px] border-gray-600 rounded-xl z-50;
}

.title {
    @apply uppercase text-3xl font-semibold tracking-widest cursor-pointer;
}

.menu-list {
    @apply w-full hidden lg:flex flex-row justify-center items-center;
}

.menu-list ul {
    @apply flex gap-5;
}

.menu-list ul li {
    @apply inline-block mx-2;
}

.active {
    @apply border-2 w-6 rounded-2xl;
}

.socials {
    @apply flex flex-row justify-end items-center gap-3;
}

.icon {
    @apply text-xl md:text-2xl;
}

.mobile-menu {
    @apply block lg:hidden;
}

.mobile-menu-icon {
    @apply text-3xl md:text-4xl font-bold p-1 border-2 border-white rounded-full bg-white text-background cursor-pointer;
}

.mobile-toggle {
    @apply flex flex-col justify-center w-[94vw] md:w-[91vw] xl:w-[80vw] h-[32vh] md:h-[25vh] bg-primary border-2 border-primary absolute mt-[43vh] md:mt-[34vh] rounded-xl;
}

.mobile-toggle-menu {
    @apply flex flex-col justify-center items-center gap-2 p-4;
}

